// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionStatus should render when confirmed 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="sc-bdnxRM NjstW text-theme-success-600"
            height="20"
            width="20"
          >
            <svg>
              circle-check-mark.svg
            </svg>
          </div>
          <span>
            Confirmed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionStatus should render when not confirmed 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="sc-bdnxRM NjstW text-theme-warning-300"
            height="20"
            width="20"
          >
            <svg>
              clock.svg
            </svg>
          </div>
          <span>
            Not yet confirmed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
